--- a/index.html
+++ b/index.html
@@ -4,105 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/stylesMob.css" />
+    <link rel="stylesheet" href="css/stylesPad.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <!-- need to add custom font -->
   </head>
   <body>
-    <div class="header-card">
+    <div class="header-background">
       <h2>Student Name</h2>
-      <nav>
-        <a href="#">HOME</a>
-        <a href="#portfolio">PORTFOLIO</a>
-        <a href="#contact">CONTACT</a>
-      </nav>
+      <div class="header-card">
+        <nav>
+          <a id="home-nav" href="#">HOME</a>
+          <a href="#portfolio">PORTFOLIO</a>
+          <a href="#contact">CONTACT</a>
+        </nav>
 
-      <img
-        class="profile-pic"
-        src="/images/responsive-layout-profile.png"
-        alt="profile pic"
-      />
-      <p class="bio-text">
-        Hi! I'm a front-end developer who loves responsive design and css. I
-        recently finished a degree in front-end web development at Treehouse and
-        am excited to put all my skills to use!
-      </p>
+        <div class="bio-text-pic">
+          <img
+            class="profile-pic"
+            src="/images/responsive-layout-profile.png"
+            alt="profile pic"
+          />
+          <p class="bio-text">
+            Hi! I'm a front-end developer who loves responsive design and css. I
+            recently finished a degree in front-end web development at Treehouse
+            and am excited to put all my skills to use!
+          </p>
+        </div>
+      </div>
     </div>
     <h4 id="portfolio" class="portfolio-heading">PORTFOLIO</h4>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-1.png"
-        alt="marketing page"
-      />
-      <h3 class="bio-card-heading">Marketing Page</h3>
-      <p class="bio-card-text">
-        This project sows the front page of a marketing website meant for a
-        specific business I'm interested in.
-      </p>
+    <div class="card-holder">
+      <div class="bio-card left">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-1.png"
+          alt="marketing page"
+        />
+        <h3 class="bio-card-heading">Marketing Page</h3>
+        <p class="bio-card-text">
+          This project sows the front page of a marketing website meant for a
+          specific business I'm interested in.
+        </p>
+      </div>
+      <div class="bio-card right">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-2.png"
+          alt="search page"
+        />
+        <h3 class="bio-card-heading">Search Page</h3>
+        <p class="bio-card-text">
+          This project searches through a specific database to find information
+          that the user is trying to look up.
+        </p>
+      </div>
     </div>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-2.png"
-        alt="search page"
-      />
-      <h3 class="bio-card-heading">Search Page</h3>
-      <p class="bio-card-text">
-        This project searches through a specific database to find information
-        that the user is trying to look up.
-      </p>
+    <div class="card-holder">
+      <div class="bio-card left">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-3.png"
+          alt="search page"
+        />
+        <h3 class="bio-card-heading">Travel App</h3>
+        <p class="bio-card-text">
+          This project compares travel times based on different transportation
+          methods and tells you the best one.
+        </p>
+      </div>
+      <div class="bio-card left">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-4.png"
+          alt="search page"
+        />
+        <h3 class="bio-card-heading">Map of Favorite Spots</h3>
+        <p class="bio-card-text">
+          This project uses mapping apis to plot points for my favorite spots in
+          the city for a do-it-yourself walking tour.
+        </p>
+      </div>
     </div>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-3.png"
-        alt="search page"
-      />
-      <h3 class="bio-card-heading">Travel App</h3>
-      <p class="bio-card-text">
-        This project compares travel times based on different transportation
-        methods and tells you the best one.
-      </p>
+    <div class="card-holder">
+      <div class="bio-card left">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-5.png"
+          alt="search page"
+        />
+        <h3 class="bio-card-heading">Photo Gallery</h3>
+        <p class="bio-card-text">
+          This project shows pictures from a recent trip to the viewer and
+          allows them to easily navigate through photos.
+        </p>
+      </div>
+      <div class="bio-card right">
+        <img
+          class="bio-card-image"
+          src="/images/portfolio-6.png"
+          alt="search page"
+        />
+        <h3 class="bio-card-heading">Calculator</h3>
+        <p class="bio-card-text">
+          Someone can enter in the numbers they want, and press the big blue
+          button and get the result.
+        </p>
+      </div>
     </div>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-4.png"
-        alt="search page"
-      />
-      <h3 class="bio-card-heading">Map of Favorite Spots</h3>
-      <p class="bio-card-text">
-        This project uses mapping apis to plot points for my favorite spots in
-        the city for a do-it-yourself walking tour.
-      </p>
-    </div>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-5.png"
-        alt="search page"
-      />
-      <h3 class="bio-card-heading">Photo Gallery</h3>
-      <p class="bio-card-text">
-        This project shows pictures from a recent trip to the viewer and allows
-        them to easily navigate through photos.
-      </p>
-    </div>
-    <div class="bio-card">
-      <img
-        class="bio-card-image"
-        src="/images/portfolio-6.png"
-        alt="search page"
-      />
-      <h3 class="bio-card-heading">Calculator</h3>
-      <p class="bio-card-text">
-        Someone can enter in the numbers they want, and press the big blue
-        button and get the result.
-      </p>
-    </div>
+
     <div id="contact" class="contact">
       <h4 class="contact-heading">CONTACT</h4>
+
       <p class="contact-text">
         If you're interested in chatting or want more information about what
         I've been working on, I'd love to hear from you!
@@ -115,8 +132,12 @@
       </p>
       <hr />
       <div id="footer">
-        <p>Student name</p>
-        <p>BACK TO TOP</p>
+        <p id="student-name">Student name</p>
+        <p id="back-to-top"><a href="#">BACK TO TOP</a></p>
+        <div id="bottom-menu">
+          <a href="#">HOME</a><a href="#portfolio">PORTFOLIO</a
+          ><a href="#contact">CONTACT</a>
+        </div>
       </div>
     </div>
   </body>
