--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/stylesMob.css" />
     <link rel="stylesheet" href="css/stylesPad.css" />
+    <link rel="stylesheet" href="css/stylesBig.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -39,7 +40,7 @@
     </div>
     <h4 id="portfolio" class="portfolio-heading">PORTFOLIO</h4>
     <div class="card-holder">
-      <div class="bio-card left">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-1.png"
@@ -51,7 +52,7 @@
           specific business I'm interested in.
         </p>
       </div>
-      <div class="bio-card right">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-2.png"
@@ -63,9 +64,7 @@
           that the user is trying to look up.
         </p>
       </div>
-    </div>
-    <div class="card-holder">
-      <div class="bio-card left">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-3.png"
@@ -77,7 +76,7 @@
           methods and tells you the best one.
         </p>
       </div>
-      <div class="bio-card left">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-4.png"
@@ -89,9 +88,7 @@
           the city for a do-it-yourself walking tour.
         </p>
       </div>
-    </div>
-    <div class="card-holder">
-      <div class="bio-card left">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-5.png"
@@ -103,7 +100,7 @@
           allows them to easily navigate through photos.
         </p>
       </div>
-      <div class="bio-card right">
+      <div class="bio-card">
         <img
           class="bio-card-image"
           src="/images/portfolio-6.png"
