removing slashes from img src

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="bio-text-pic">
           <img
             class="profile-pic"
-            src="/images/responsive-layout-profile.png"
+            src="images/responsive-layout-profile.png"
             alt="profile pic"
           />
           <p class="bio-text">
@@ -43,7 +43,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-1.png"
+          src="images/portfolio-1.png"
           alt="marketing page"
         />
         <h3 class="bio-card-heading">Marketing Page</h3>
@@ -55,7 +55,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-2.png"
+          src="images/portfolio-2.png"
           alt="search page"
         />
         <h3 class="bio-card-heading">Search Page</h3>
@@ -67,7 +67,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-3.png"
+          src="images/portfolio-3.png"
           alt="search page"
         />
         <h3 class="bio-card-heading">Travel App</h3>
@@ -79,7 +79,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-4.png"
+          src="images/portfolio-4.png"
           alt="search page"
         />
         <h3 class="bio-card-heading">Map of Favorite Spots</h3>
@@ -91,7 +91,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-5.png"
+          src="images/portfolio-5.png"
           alt="search page"
         />
         <h3 class="bio-card-heading">Photo Gallery</h3>
@@ -103,7 +103,7 @@
       <div class="bio-card">
         <img
           class="bio-card-image"
-          src="/images/portfolio-6.png"
+          src="images/portfolio-6.png"
           alt="search page"
         />
         <h3 class="bio-card-heading">Calculator</h3>
