--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="header-background">
-      <h2>Student Name</h2>
       <div class="header-card">
-        <nav>
+        <h2 class="big-nav">Student Name</h2>
+        <nav class="big-nav">
           <a id="home-nav" href="#">HOME</a>
           <a href="#portfolio">PORTFOLIO</a>
           <a href="#contact">CONTACT</a>
